test/functions/errors/unexpected_argument_type_4.dmd
function add(a: int64, b: int64): int64
    return a + b

function awesome(a: bool, b: bool): bool
    return a and b

a := 20
b := 50
print(add(a, b))
print(awesome(a, b))

--- Output
Type mismatch

The type of the 1st argument of 'awesome' doesn't match with what I expect.

10│ print(awesome(a, b))

The type received is:

int64

But possible types are:

bool

---